--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "@types/history": "^4.7.8",
     "@types/jest": "^26.0.19",
     "@types/material-ui": "^0.21.8",
     "@types/node": "^12.19.12",
@@ -14,8 +15,10 @@
     "@types/react-bootstrap": "^0.32.25",
     "@types/react-dom": "^16.9.10",
     "bootstrap": "^4.5.3",
+    "history": "^5.0.0-beta.9",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "4.0.1",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
