--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/react-bootstrap": "^0.32.25",
     "@types/react-dom": "^16.9.10",
     "bootstrap": "^4.5.3",
+    "eslint-plugin-react-hooks": "0.0.0-8e5adfbd7",
+    "firebase": "^8.2.3",
     "history": "^5.0.0-beta.9",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
